# shark

./: .gitignore  CMakeLists.txt  README.md  runtests.sh
as/: CMakeLists.txt
as/include/: assemble.h  diagnostics.h  ir.h  lexer.h  loc.h  parser.h  tokens.h
as/src/: assemble.c  diagnostics.c  ir.c  lexer.c  loc.c  main.c  parser.c  tokens.c
as/test/: lexer.C  lexer.c  lexer.cpp
common/: config.h.in
common/include/: arena.h  arr.h  encodings.h  err.h  file.h  program.h  str.h  trunc.h
common/src/: arena.c  encodings.c  err.c  file.c  program.c  str.c  trunc.c
dis/: CMakeLists.txt
dis/include/: disassemble.h
dis/src/: disassemble.c  main.c
doc/: Makefile  data.json  gen.py  isa.tex
emu/user/: CMakeLists.txt
emu/user/include/: cpu.h
emu/user/src/: cpu.c  main.c
